create Button with ViewTransition

--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>react@19 use</title>
+    <title>react &lt;ViewTransition /&gt;</title>
   </head>
+  <style>
+    html,
+    body {
+      height: 100%;
+    }
+    main {
+      display: flex !important;
+      flex-direction: column;
+      height: 100%;
+    }
+  </style>
   <body>
     <main id="root"></main>
   </body>
