--- a/index.html
+++ b/index.html
@@ -5,20 +5,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>react &lt;ViewTransition /&gt;</title>
+    <title>TodoMVC: React &lt;ViewTransition /&gt;</title>
   </head>
-  <style>
-    html,
-    body {
-      height: 100%;
-    }
-    main {
-      display: flex !important;
-      flex-direction: column;
-      height: 100%;
-    }
-  </style>
   <body>
-    <main id="root"></main>
+    <section class="todoapp" id="root"></section>
+    <footer class="info">
+      <p>Double-click to edit a todo</p>
+      <p>Created by the TodoMVC Team</p>
+      <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+    </footer>
   </body>
 </html>
